# create-lambda-layers-for-python

./: .gitignore  pyproject.toml  pyvenv.cfg  requirements.txt
.github/workflows/: python-app.yml
layers_env/: main.py
src/: main.py
